bugfix: add missing configuration for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# Database Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/vabanque
+spring.datasource.username=postgres
+spring.datasource.password=zaq1@WSX
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
