feature: add auth flow
- sign in
- sign up
- refresh
- logout and logout all

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.show-sql=true
+
+# Security
+jwt.secret=vabanquesecret
+jwt.expiration=300000
