--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.1'
 
 services:
 
-  db:
-    container_name: "vabanque-postgres"
-    image: "postgres:11"
+  mysql:
+    container_name: "vabanque-mysql"
+    command: --default-authentication-plugin=mysql_native_password
+    image: "mysql:8"
     ports:
-      - "5434:5432"
+      - "3308:3306"
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "zaq1@WSX"
+      MYSQL_ROOT_PASSWORD: "zaq1@WSX"
 
   adminer:
     container_name: "vabanque-adminer"
     image: "adminer"
     ports:
-      - "5435:8080"
+      - "3310:8080"
