build: prepare environment to vamk system
- lower the version of mysql
- change migrations
- add tomcat container example
- add war configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     generate-ddl: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
         ddl-auto: verify
 #    show-sql: true
