--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3.1'
 
 services:
+  app:
+    container_name: "vabanque-app"
+    build: .
+    ports:
+      - "8080:8080"
 
   mysql:
     container_name: "vabanque-mysql"
     command: --default-authentication-plugin=mysql_native_password
-    image: "mysql:8"
+    image: "mysql:5"
     ports:
       - "3308:3306"
     environment:
