--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/vabanque
-    username: root
-    password: zaq1@WSX
+    url: ${DATABASE_URL:jdbc:mysql://localhost:3308/vabanque}
+    username: ${DATABASE_USERNAME:root}
+    password: ${DATABASE_PASSWORD:zaq1@WSX}
   jpa:
     generate-ddl: true
     properties:
@@ -17,5 +17,5 @@ spring:
     max-request-size: 10MB
 
 vabanque.jwt:
-  secret: vabanquesecret
+  secret: ${JWT_SECRET:vabanquesecret}
   expiration: 300000
